# opencl_study

./: CMakeLists.txt  README.md
gst_8mq/: CMakeLists.txt  _kernel.cl  main.cc
gst_8mq/ocl/: CMakeLists.txt  imx_device.c  imx_device.h  ocl_cv.c  ocl_cv.h
gst_case/: CMakeLists.txt  g2d_resize.cc  g2d_test.cc  gst_pipeline_debug.cc  gstreamer_cap.cc  open_camera_base.cc  open_camera_gst.cc  open_camera_tmp.cc  open_camera_v1.cc  open_camera_v2.cc  open_camera_v3.cc
lib/gst/: CMakeLists.txt  gstimxcommon.c  imx_2d.c  imx_2d.h  imx_2d_device_g2d.c
lib/ocl/: _kernel.cl  imx_device.c  imx_device.h  ocl_cv.c  ocl_cv.h  ocl_functions.c  ocl_functions.h
ocl_case/: CMakeLists.txt  bgra2rgb.cc  copy.cc  copy_base.cc  fillBorder.cc  learning_vector.cc  zero_copy.cc  zero_copy_g2d.cc  zero_copy_last.cc  zero_cpy_g2d.cc
